dsalgo/java/StayzillaMiniQ/error
CsvMessage.java:1: error: CsvMessage is not abstract and does not override abstract method getMessageContent() in Message
public class CsvMessage implements Message{
       ^
CsvMessage.java:15: error: getMessageContent() in CsvMessage cannot implement getMessageContent() in Message
	public Object getMessageContent()
	              ^
  return type Object is not compatible with String
InMemoryQueue.java:63: error: incompatible types: Message cannot be converted to boolean
			return msg; 
			       ^
InMemoryQueue.java:67: error: incompatible types: <null> cannot be converted to boolean
			return null;
			       ^
4 errors
